Learnt about Control Flow Statement

--- a/w3schools_js/index.html
+++ b/w3schools_js/index.html
@@ -41,6 +41,11 @@
 
 <br><br>
 
+<label for="score">Enter Exam Score:</label>
+<input type="text" id="score" name="score">
+<button onclick="getGrade()">Get Grade</button>
+<p>Grade: <span id="grade"></span></p>
+
 <script src="script.js"></script>
 <script src="main.js"></script>
 </body>
