Learnt About Loops

--- a/w3schools_js/index.html
+++ b/w3schools_js/index.html
@@ -38,13 +38,21 @@
 <button onclick="max_min()">Get Max/Min</button>
 <p>Max: <span id="maxResult"></span></p>
 <p>Min: <span id="minResult"></span></p>
-
 <br><br>
 
 <label for="score">Enter Exam Score:</label>
 <input type="text" id="score" name="score">
 <button onclick="getGrade()">Get Grade</button>
 <p>Grade: <span id="grade"></span></p>
+<br><br>
+
+<label for="cmd">Enter "on" or "off":</label>
+<input type="text" id="cmd" name="cmd">
+<button onclick="toggleBulb()">submit Cmd</button>
+
+<img id="myImage" src="/w3schools_js/img/pic_bulboff.gif" style="width:100px">
+<br><br>
+
 
 <script src="script.js"></script>
 <script src="main.js"></script>
