Learnt about JS Objects

--- a/w3schools_js/index.html
+++ b/w3schools_js/index.html
@@ -64,6 +64,11 @@
     <p id="demo_">Hello World!</p>
     <br><br>
 
+    <div class="card">
+        
+    </div>
+
+
     <script src="script.js"></script>
     <script src="main.js"></script>
 </body>
