Learnt about JS date

--- a/w3schools_js/student.html
+++ b/w3schools_js/student.html
@@ -18,6 +18,7 @@
             background-color: white;
             padding: 20px;
             border-radius: 20px;
+            width: 50%;
         }
 
         img {
@@ -44,7 +45,7 @@
                 lastname: "Olusanya",
                 age: 21,
                 sex: "male",
-                matricNumber: 20227483,
+                matricNumber: 20224633,
                 gpa1: 5.0,
                 gpa2: 4.5,
                 cgpa: function () {
@@ -57,7 +58,7 @@
                 lastname: "Olusanya",
                 age: 20,
                 sex: "female",
-                matricNumber: 20227483,
+                matricNumber: 20225683,
                 gpa1: 3.0,
                 gpa2: 4.5,
                 cgpa: function () {
@@ -108,8 +109,8 @@
                 firstname: "Taooma",
                 lastname: "Asake",
                 age: 21,
-                sex: "male",
-                matricNumber: 20227487,
+                sex: "female",
+                matricNumber: 20227437,
                 gpa1: 5.0,
                 gpa2: 4.5,
                 cgpa: function () {
