Learnt about JS Array Iterations

--- a/w3schools_js/index.html
+++ b/w3schools_js/index.html
@@ -65,8 +65,12 @@
     <br><br>
 
     <div class="card">
-        
+
     </div>
+
+    <ul class="points"></ul>
+    <button onclick="showPoints()">Show Points</button>
+
 
 
     <script src="script.js"></script>
