Worked On JS Tasks

--- a/w3schools_js/index.html
+++ b/w3schools_js/index.html
@@ -48,13 +48,10 @@
     <p>Grade: <span id="grade"></span></p>
     <br><br>
 
-    <label for="cmd">Enter "on" or "off":</label>
-    <input type="text" id="cmd" name="cmd">
-    <button onclick="toggleBulb()">submit Cmd</button>
-
-    <img id="myImage" src="/w3schools_js/img/pic_bulboff.gif" style="width:100px">
-    <br><br>
-
+    <img id="myImage" src="/w3schools_js/img/pic_bulboff.gif" width="100" height="180">
+  <br><br>
+  <button id="toggleBtn" onclick="toggleBulb()">Turn On</button>
+<br> <br>
     <button onclick="changeBackgroundColor()">Change Background Color</button>
 
     <p>Convert string to lower case:</p>
